--- a/sites/core/package.json
+++ b/sites/core/package.json
@@ -2,13 +2,13 @@
   "name": "core",
   "private": true,
   "description": "A starter for Gatsby integrated with Ionic + Typescript and TDD-ready",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "author": "Barry Low <barry@studiobear.co>",
   "main": "src/index.js",
   "dependencies": {
     "@ionic/react": "^4.11.10",
     "@loadable/component": "^5.12.0",
-    "@studiobear/shared-utils": "0.0.5",
+    "@studiobear/shared-utils": "^0.1.0",
     "classnames": "^2.2.6",
     "gatsby": "^2.19.5",
     "gatsby-plugin-codegen": "^1.0.14",
