--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "sites/*"
   ],
   "description": "An advanced Gatsby-based monorepo setup to develop with Typescript, Jest and Cypress",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": "Barry Low <barry@studiobear.co>",
   "scripts": {
+    "release": "standard-version",
     "build": "gatsby build",
     "develop": "lerna run develop --scope core",
     "develop:clean": "lerna clean --yes && lerna bootstrap && yarn workspace core gatsby clean && yarn workspace core gatsby develop",
@@ -96,6 +97,7 @@
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "standard-version": "^7.1.0",
     "start-server-and-test": "^1.10.6",
     "ts-jest": "^25.0.0",
     "ts-node": "^8.5.4",
