--- a/packages/shared-ui-themeui/package.json
+++ b/packages/shared-ui-themeui/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@studiobear/shared-ui-ionic",
-  "description": "Shared-UI Ionic components for Studiobear Gatsby Typescript + Testing",
+  "name": "@studiobear/shared-ui-themeui",
+  "description": "Shared-UI Theme UI components for Studiobear Applications",
   "version": "0.1.0",
   "author": "Barry Low <barry@studiobear.co>",
   "publishConfig": {
@@ -20,6 +20,7 @@
     "react-dom": "^16.12.0",
     "react-helmet-async": "^1.0.4",
     "react-typography": "^0.16.19",
+    "theme-ui": "^0.3.1",
     "typography": "^0.16.19",
     "typography-theme-st-annes": "^0.16.19"
   },
@@ -36,16 +37,27 @@
     "test": "jest --passWithNoTests",
     "test:watch": "npm test -- --watch",
     "cy:open": "cypress open",
-    "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open"
+    "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.3",
+    "@storybook/addon-actions": "^5.1.11",
+    "@storybook/addon-knobs": "^5.3.10",
+    "@storybook/addon-links": "^5.1.11",
+    "@storybook/addon-notes": "^5.3.10",
+    "@storybook/addons": "^5.1.11",
+    "@storybook/api": "^5.3.9",
+    "@storybook/core": "^5.3.9",
+    "@storybook/react": "^5.1.11",
     "@testing-library/jest-dom": "^5.0.2",
     "@types/loadable__component": "^5.10.0",
     "@types/react-helmet": "^5.0.15",
+    "babel-loader": "^8.0.6",
+    "babel-preset-react-app": "^9.1.1",
     "jest": "^25.1.0",
     "ts-jest": "^25.0.0",
-    "typescript": "^3.7.4",
-    "typescript-loadable-components-plugin": "^1.0.0"
-  },
-  "gitHead": "6200917235388cc135575c57380a381e433e2210"
+    "typescript": "^3.7.4"
+  }
 }
